--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "introspect": "drizzle-kit introspect:pg",
+    "migration:generate": "drizzle-kit generate:pg",
+    "migration:migrate": "tsx ./src/migrate.ts",
+    "seed": "tsx ./src/seed.ts"
   },
   "dependencies": {
+    "drizzle-orm": "^0.30.8",
+    "next": "14.2.2",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "zod": "^3.22.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.16",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "tsx": "^4.7.2",
+    "typescript": "^5"
   }
 }
